--- a/SportsStore.UnitTests/SportsStore.UnitTests.csproj
+++ b/SportsStore.UnitTests/SportsStore.UnitTests.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnitTest1.cs" />
+    <Compile Include="CartTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
